# eopgp-chdm

./: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: config_service.json
noachdm/: __init__.py  chdm.py  cli.py  utils.py
noachdm/messaging/: __init__.py  kafka_consumer.py  kafka_producer.py  message.py
noachdm/models/: BIT.py  help_funcs.py  resnet.py
